--- a/app/globals.css
+++ b/app/globals.css
@@ -15,19 +15,48 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+.sidebar::-webkit-scrollbar {
+  width: 3px; 
+}
+.sidebar::-webkit-scrollbar-button {
+  display: none;
+}
+.sidebar::-webkit-scrollbar-track {
+  background: #ffffff; 
+}
+
+.sidebar::-webkit-scrollbar-thumb {
+  background-color: rgb(21 26 31 / 15%); 
+  border-radius: 10px; 
+  border: 2px solid #ffffff; 
+}
+
+.sidebar {
+  scrollbar-width: thin; 
+  scrollbar-color: #e2e8f0 #ffffff; 
+}
+.x-sidebar::-webkit-scrollbar{
+  height: 2px;
+}
+.swiper-button-storie-prev,
+.swiper-button-storie-next{
+  top: 40% !important;
+}
+.swiper-button-disabled{
+  display: none;
+}
+.swiper-button-storie-prev{
+  left: -10px;
+}
+.swiper-button-storie-next{
+  right: -10px;
+}
+#swal2-title{
+  display: flex !important;
+  justify-content: center;
 }
